# ml_drive_tracker

./: .gitignore  main.py  pyproject.toml
core/: config.py
data/: data_manager.py
ml/: dataset.py  model.py  trainer.py  transforms.py
src/: data_manager.py  dataset.py  utils.py
