[project]
name = "ml-drive-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "torch==2.2.2",
    "torchvision>=0.17.2",
    "tqdm>=4.67.3",
]
